--- a/how_to.html
+++ b/how_to.html
@@ -51,8 +51,7 @@
           <div class="video-container">
             <iframe width="450" height="350" src="https://www.youtube.com/embed/szscXi1qUHU" class="video video_one-how-to"></iframe>
   
-            <iframe width="450" height="350" src="https://www.youtube.com/embed/KCj1saibrJY&list=LL&index=1&t=95s" class="video video_two-how-to"></iframe>
-          </div>  	  
+            <iframe width="450" height="350" src="https://www.youtube.com/embed/KCj1saibrJY" class="video video_two-how-to"></iframe>  
       	  
       	  <h2 class="sub-head-3_how-to center margin-top fs-700 letter-spacing-3">Resources</h2>
       	  <article class="resources flex-column">
