--- a/how_to.html
+++ b/how_to.html
@@ -5,7 +5,7 @@
       <title>Biography of Anna Atkins</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link type="text/css" rel="stylesheet" href="../css/photographer.css">
+      <link type="text/css" rel="stylesheet" href="css/photographer.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital@1&display=swap" rel="stylesheet">     
@@ -51,7 +51,8 @@
           <div class="video-container">
             <iframe width="450" height="350" src="https://www.youtube.com/embed/szscXi1qUHU" class="video video_one-how-to"></iframe>
   
-            <iframe width="450" height="350" src="https://www.youtube.com/embed/KCj1saibrJY" class="video video_two-how-to"></iframe>  
+            <iframe width="450" height="350" src="https://www.youtube.com/embed/KCj1saibrJY" class="video video_two-how-to"></iframe>
+          </div>  	  
       	  
       	  <h2 class="sub-head-3_how-to center margin-top fs-700 letter-spacing-3">Resources</h2>
       	  <article class="resources flex-column">
