--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <img src="imgs/anna_atkins1.jpg" alt="Portrait of Anna Atkins" class="image_portrait container_content-item" />
       <h2 class="container_content-item grid-item_sub-header center fs-700 letter-spacing-3 margin-top">Nature Photographer</h2>
       <h3 class="container_content-item grid-item_life fs-600 margin-top-bottom center"><a href="bio.html">Her Life</a></h3>
-      <h3 class="container_content-item grid-item_photos fs-600 center margin-top-bottom"><a href="photos.html">Her Photographes</a></h3>
+      <h3 class="container_content-item grid-item_photos fs-600 center margin-top-bottom"><a href="photos.html">Her Photographs</a></h3>
       <div class="home_images">
         <img src="imgs/index-00.png" alt="Algae" class="home_img">
         <img src="imgs/index-01.png" alt="Flower" class="home_img">
