--- a/photos.html
+++ b/photos.html
@@ -33,7 +33,7 @@
       </header>
 
       <main class="main_photos flex-column">
-      	<h1 class="fs-800 photo_header center">Photographes</h1>
+      	<h1 class="fs-800 photo_header center">Photographs</h1>
 
         <section class="photo_section_one">
       	  <h2 class="fs-700 margin-top center">Ferns</h2>
