--- a/how_to.html
+++ b/how_to.html
@@ -49,9 +49,12 @@
       	  <h2 class="margin-top-bottom center sub_head-how-to fs-700 letter-spacing-3">How To Create Your Own</h2>
           
           <div class="video-container">
-            <iframe width="450" height="350" src="https://www.youtube.com/embed/szscXi1qUHU" class="video video_one-how-to"></iframe>
-  
-            <iframe width="450" height="350" src="https://www.youtube.com/embed/KCj1saibrJY" class="video video_two-how-to"></iframe>
+            <div class="individual-video-container">
+              <iframe src="https://www.youtube.com/embed/szscXi1qUHU" class="video video_one-how-to"></iframe>
+            </div>
+            <div class="individual-video-container">    
+              <iframe src="https://www.youtube.com/embed/KCj1saibrJY" class="video video_two-how-to"></iframe>
+            </div>
           </div>  	  
       	  
       	  <h2 class="sub-head-3_how-to center margin-top fs-700 letter-spacing-3">Resources</h2>
